hphp/hack/test/typecheck/generics_restrictions/covariance6.php.exp
File "covariance6.php", line 4, characters 10-11:
Illegal usage of a contravariant type parameter (Typing[4121])
File "covariance6.php", line 3, characters 10-10:
This is where the parameter was declared as contravariant (-)
File "covariance6.php", line 4, characters 10-11:
A non private class member is always invariant
