hphp/hack/test/typecheck/generics_restrictions/covariance6.php
<?hh // partial

class X<-T> {
  public ?T $x;
}
